@@ -1,3 +1,7 @@
+2010-09-22  Stas Boukarev  <stassats@gmail.com>
+
+	* slime-repl.el: Handle (:abort condition) message from lisp.
+
 2010-09-18  Tobias C. Rittweiler <tcr@freebits.de>
 
 	* slime-parse.el (slime-parse-form-upto-point): Fix lp#627308.
